# rros-mocap-optitrack

./: .gitignore  README.md
arduino_signal/: package.xml  setup.cfg  setup.py
ati_sensor_interfaces/: CMakeLists.txt  package.xml
ati_sensor_service/: package.xml  setup.cfg  setup.py
data_collection/: .gitignore  package.xml  setup.py
data_collection/data_collection/: arduino_blue.py  arduino_green.py  arduino_switchboard.ino  ati_wrench_publisher.py  ati_wrench_writer.py  experiment_recorder.py  export_take.py  force_plot_video.py  impedence_recorder.py  multi_sensor_recorder.py  repeatability_test.py  robot_interface.py  screen_recorder.py  switchboard_router.py  timestamped_images_batch.py  timestamped_images_to_video.py
data_collection/data_collection/legacy_files/: PIH_state_machine.py  camera_recorder.py  experiment_executor.py  force_data.csv  force_wrench_recorder.py  kuka_wrench_recorder.py  results_plotting.ipynb  wrench_filtering_validation.ipynb
data_collection/data_collection/submodules/: ati_sensor_socket.py  transformation_utils.py  utils.py
data_collection/data_collection/submodules/legacy_codes/: ati_sensor_socket.py
kuka_blue_pose_pub/: package.xml  setup.cfg  setup.py
launch/: launch_force_mocap.py  launch_y_up.py
mocap_optitrack_interfaces/: CMakeLists.txt
mocap_service/: package.xml  setup.cfg  setup.py
takes/: ft_002.csv  ft_003.csv  ft_004.csv  ft_005.csv  ft_006.csv  ft_007.csv  ft_008.csv  ft_009.csv  ft_010.csv  ft_011.csv  ft_012.csv  ft_013.csv  ft_014.csv  ft_015.csv  ft_016.csv  ft_017.csv  ft_018.csv  ft_019.csv  (+234 more)
(+18 files in other folders)
