<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_collection</name>
  <version>0.0.0</version>
  <description>The data collection package</description>
  <maintainer email="hantaoye@usc.edu">Hantao Ye</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <!-- <depend>cv2</depend> -->
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>mocap_optitrack_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>python3-yaml</depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <depend>ati_sensor_interfaces</depend>
  <depend>ati_sensor_service</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
